<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniWeather</string>
    <string name="title_section1">Fargo</string>
    <string name="title_section2">Bismarck</string>
    <string name="title_section3">Grand Forks</string>
    <string name="title_section4">Current Location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">MiniWeather</string>
    <string name="action_settings">Settings</string>
    <string name="main_text">999°</string>
    <string name="button_update_text">Force Update</string>
    <string name="low_text_default">Low:</string>
    <string name="high_text_default">High:</string>
    <string name="wind_text_default">Wind:</string>
    <string name="feel_text_default">Feel:</string>
    <string name="text_location_default">Default Location</string>
    <string name="text_date_default">Date</string>
    <string name="text_forecast_default">Temps</string>
    <string name="text_conditions_default">Conditions</string>
    <string name="text_precip_chance">Precip</string>
    <string name="text_wind_default">Wind:</string>

</resources>
